# libmoon

./: Cargo.toml  flake.nix
src/: chat.rs  gateway.rs  lib.rs  main.rs  message.rs  moon.rs  settings.rs
src/persona/: basic.rs  card.rs  loader.rs  mod.rs
