[package]
name = "libmoon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dirs = "6.0.0"
env_logger = "0.11.8"
futures = "0.3.31"
image = "0.25.9"
llm = "1.3.6"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
